[package]
name = "websocket"
version = "0.1.1"
authors = ["Alberto Cole <acpii2005@gmail.com>"]
edition = "2018"
[dependencies]
actix-web = "0.7.16"
log = "0.4.6"
env_logger = "0.6.0"
serde_json = "1.0.33"
serde = "1.0.82"
serde_derive = "1.0.82"
rand="0.6.1"
bytes="0.4.11"
byteorder="1.2.7"
futures="0.1.25"
tokio-core="0.1.17"
tokio-io="0.1.10"